2002-05-05  Daniel Morgan <danmorg@sc.rr.com>

	* doc/ado-net: correct formatting
	* doc/index: added credit i forgot to add

2002-05-05  Daniel Morgan <danmorg@sc.rr.com>

	* doc/ado-net: i did not format it correctly earlier, i 
	tried added various tags where appropriate.
	
	* doc/index: added news item for May 5, 2002 - ado.net able
	to retrieve data now

2002-05-05  Daniel Morgan <danmorg@sc.rr.com>

	* doc/ado-net: updated the current status which
	I kept forgetting to do.

2002-05-05  Daniel Morgan <danmorg@sc.rr.com>

	* doc/ado-net: updated to includes an example for
	running ipc-daemon as a	Windows service.  Thanks
	to gonzalo.

2002-05-05  Daniel Morgan <danmorg@sc.rr.com>

	* doc/ado-net: updated to include installation of
	PostgreSQL DBMS under cygwin.  It is a TODO for Linux though.
	Also included notes on running the System.Data/Test/PostgresTest.cs
	that should work on a lot of Mono installations that have
	PostgreSQL installed.  If not please let me, rodrigo, or gonzalo
	know.

2002-05-01  Rodrigo Moya <rodrigo@ximian.com>

	* doc/ado-net: updated a little bit.

2002-04-30  Jeffrey Stedfast  <fejj@ximian.com>

	* configure.in: Added checks for timezone stuff.

2002-04-30  Dick Porter  <dick@ximian.com>

	* acconfig.h:
	* configure.in: Added option to disable using shared memory for
	handles

2002-04-28  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* configure.in: fix for conditional "THREADS_PTHREAD" was never 
	defined problem under cygwin with latest version of automake and
	autoconf. Patch from Jeroen Janssen <japj@darius.demon.nl>.

2002-04-23  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* configure.in: removed -Wshadow from CFLAGS.

2002-04-12  Rodrigo Moya <rodrigo@ximian.com>

	* status/maintainers.xml: added danmorg and myself for System.Data.*
	classes.

	* status/class.xml: added System.Data.* classes.

2002-04-08  Dick Porter  <dick@ximian.com>

	* configure.in: Set -mno-cygwin here rather than in the build script
