@@ -1,17 +1,0 @@
-#ifndef _WAPI_WAIT_PRIVATE_H_
-#define _WAPI_WAIT_PRIVATE_H_
-
-/* This is an internal, private header file */
-
-#include <config.h>
-
-#include <glib.h>
-#include <pthread.h>
-#include <semaphore.h>
-
-#include "wapi-private.h"
-#include "timed-thread.h"
-
-#include "mono-mutex.h"
-
-#endif /* _WAPI_WAIT_PRIVATE_H_ */
